--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
 
-  <div id="flag" data-stellar-ratio="1"></div>
-  <div id="house" data-stellar-ratio="2"></div>
+  <div id="flag" data-slide="1" data-stellar-background-ratio="0.5"></div>
+  <div id="house" data-slide="2" data-stellar-background-ratio="0.5"></div>
+  <div id="tree" data-slide="3" data-stellar-background-ratio="0.5"></div>
+  <div id="flowers" data-slide="4" data-stellar-background-ratio="0.5"></div>
   <div id="test"></div>
 
    <script>
