--- a/index.html
+++ b/index.html
@@ -9,12 +9,24 @@
   <title>National Day of Civic Hacking</title>
 </head>
 <body>
-
-  <div id="flag" data-slide="1" data-stellar-background-ratio="0.5"></div>
-  <div id="house" data-slide="2" data-stellar-background-ratio="0.5"></div>
-  <div id="tree" data-slide="3" data-stellar-background-ratio="0.5"></div>
-  <div id="flowers" data-slide="4" data-stellar-background-ratio="0.5"></div>
-  <div id="test"></div>
+  <header> National Day of Civic Hacking 
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#event">Event</a>
+      <a href="#projects">Projects</a>
+    </nav>
+  </header>
+  <a id="home"></a>
+  <div id="flag" data-slide="1" data-stellar-background-ratio="0.5">
+    <section class="content">
+      <h1>Stuff</h1>
+    </section>
+  </div>
+  <a id="event"></a>
+  <div id="picture1" data-slide="2" data-stellar-background-ratio="0.5"></div>
+  <a id="projects"></a>
+  <div id="picture2" data-slide="3" data-stellar-background-ratio="0.5"></div>
+  <div id="picture3" data-slide="4" data-stellar-background-ratio="0.5"></div>
 
    <script>
   	$(function() {
