--- a/index.html
+++ b/index.html
@@ -9,28 +9,55 @@
   <title>National Day of Civic Hacking</title>
 </head>
 <body>
+
   <header> National Day of Civic Hacking 
+
     <nav>
       <a href="#home">Home</a>
       <a href="#event">Event</a>
       <a href="#projects">Projects</a>
     </nav>
+
   </header>
   <a id="home"></a>
+
   <div id="flag" data-slide="1" data-stellar-background-ratio="0.5">
-    <section class="content">
-      <h1>Stuff</h1>
+  <section id="top" data-stellar-ratio="-1">
+      <h1>
+        Future Home of the National Day of Civic Hacking Clovis
+        What
+      </h1>
     </section>
+
+    
   </div>
   <a id="event"></a>
-  <div id="picture1" data-slide="2" data-stellar-background-ratio="0.5"></div>
+  <div id="picture1" data-slide="2" data-stellar-background-ratio="0.5">
+     <section class="content" >
+      <h1>How</h1>
+    </section>
+  </div>
   <a id="projects"></a>
-  <div id="picture2" data-slide="3" data-stellar-background-ratio="0.5"></div>
-  <div id="picture3" data-slide="4" data-stellar-background-ratio="0.5"></div>
+  <div id="picture2" data-slide="3" data-stellar-background-ratio="0.5">
+     <section class="content">
+      <h1>When</h1>
+    </section>
+  </div>
+  <div id="picture3" data-slide="4" data-stellar-background-ratio="0.5">
+     <section class="content">
+      <h1>Where</h1>
+    </section>
+  </div>
 
    <script>
   	$(function() {
-  		$.stellar();
+  		$.stellar({
+          scrollProperty: 'transform',
+          parallaxBackgrounds: true,
+          parallaxElements: false,
+          horizontalScrolling: false,
+          verticalScrolling: true
+        });
   	});
   </script>
 
